Bundle language-server-plugins-kotlin.jar into fat JAR (#3)
* Add release workflow, CHANGELOG, and set version to 0.1.0

* Fix inspection source attribution to Kotlin IntelliJ plugin

* Fix remaining Kotlin Language Server reference in --common-checks description

* bundle language-server-plugins-kotlin.jar into fat JAR

Download language-server-plugins-kotlin.jar from the JetBrains CDN at
build time and embed it as a classpath resource. At runtime InspectionRunner
extracts it to a temp file and loads inspection classes via URLClassLoader,
using the fat JAR's classloader as parent for IntelliJ platform APIs.

This removes the runtime dependency on a Zed installation — the fat JAR is
now self-contained. Inspection XML metadata is read from the extracted JAR
using the existing parseInspectionMeta path (no changes to filtering logic).

Why embed rather than flat-merge: the plugins JAR contains module-descriptor
XMLs (intellij.kotlin.*.xml) that IntelliJ's plugin loader picks up from the
classpath and tries to parse as top-level plugin descriptors, causing startup
failures. Keeping it as a nested resource sidesteps this entirely.

* docs: update README for self-contained JAR and Java 25 requirement